cmake_minimum_required(VERSION 2.8)

project(libstracciatella)

find_package(Cargo REQUIRED)

set(LIBSTRACCIATELLA_BUILD_SWITCHES "")
set(LIBSTRACCIATELLA_TARGET "debug")
if(CMAKE_BUILD_TYPE STREQUAL "Release")
    set(LIBSTRACCIATELLA_TARGET "release")
    set(LIBSTRACCIATELLA_BUILD_SWITCHES "--${LIBSTRACCIATELLA_TARGET}")
endif()

set(LIBSTRACCIATELLA_TARGET_DIR "${CMAKE_BINARY_DIR}/rust")
set(LIBSTRACCIATELLA_LIBRARIES "${LIBSTRACCIATELLA_TARGET_DIR}/${LIBSTRACCIATELLA_TARGET}/libstracciatella.a" "dl" "gcc_s" PARENT_SCOPE)

add_custom_target(libstracciatella ALL
        ${CMAKE_COMMAND} -E env CARGO_TARGET_DIR=${LIBSTRACCIATELLA_TARGET_DIR} ${CARGO_EXECUTABLE} build ${LIBSTRACCIATELLA_BUILD_SWITCHES}
        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
