cmake_minimum_required(VERSION 2.8)

project(libstracciatella)

find_package(Cargo REQUIRED)

set(LIBSTRACCIATELLA_BUILD_SWITCHES "")
set(LIBSTRACCIATELLA_BUILD_TYPE "debug")
set(LIBSTRACCIATELLA_BUILD_DIR "${CMAKE_BINARY_DIR}/rust")
set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES ${LIBSTRACCIATELLA_BUILD_DIR})
set(
    LIBSTRACCIATELLA_LIBRARIES
    "${LIBSTRACCIATELLA_BUILD_DIR}/${LIBSTRACCIATELLA_BUILD_TYPE}/stracciatella${CMAKE_SHARED_LIBRARY_SUFFIX}"
    PARENT_SCOPE
)

if(CMAKE_BUILD_TYPE STREQUAL "Release")
    set(LIBSTRACCIATELLA_BUILD_TYPE "release")
    set(LIBSTRACCIATELLA_BUILD_SWITCHES "--${LIBSTRACCIATELLA_BUILD_TYPE}")
endif()

if (NOT (LIBSTRACCIATELLA_TARGET STREQUAL ""))
    set(LIBSTRACCIATELLA_BUILD_SWITCHES ${LIBSTRACCIATELLA_BUILD_SWITCHES} "--verbose" "--target=${LIBSTRACCIATELLA_TARGET}")
    set(
            LIBSTRACCIATELLA_LIBRARIES
            "${LIBSTRACCIATELLA_BUILD_DIR}/${LIBSTRACCIATELLA_TARGET}/${LIBSTRACCIATELLA_BUILD_TYPE}/stracciatella${CMAKE_SHARED_LIBRARY_SUFFIX}"
            PARENT_SCOPE
    )
endif()

add_custom_target(libstracciatella ALL)
add_custom_command(
    TARGET libstracciatella
    COMMAND ${CMAKE_COMMAND} -E env CARGO_TARGET_DIR=${LIBSTRACCIATELLA_BUILD_DIR} ${CARGO_EXECUTABLE} build ${LIBSTRACCIATELLA_BUILD_SWITCHES}
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
)
